Fix bug in module-heading alignment

--- a/app/stylesheets/builtin-pages.less
+++ b/app/stylesheets/builtin-pages.less
@@ -543,7 +543,6 @@
     .module-heading {
       &:extend(.flex);
       align-items: center;
-      justify-content: space-between;
       background: #fafafa;
       padding: 7px 10px;
       border: 1px solid #ddd;
